# nl-to-sql

./: .env.example  .env.local  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: config.py  main.py
src/agent/: sql.py
src/agents/: sql.py
src/api/: healthcheck.py  router.py
src/api/v1/: sql.py  upload.py
src/chain/: sql.py
src/core/: config.py  llm.py  middlewares.py  promts.py
src/db/: session.py
src/db/models/: base.py
src/db/repository/: base.py  schema.py
src/llm/: llm.py
src/promt/: sql.py
src/service/: sql.py
src/services/: sql.py  upload.py
src/state/: sql.py
src/tool/: ddl.py  get_ddl.py
src/tools/: get_ddl.py
