[project]
name = "src"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-gigachat (>=0.3.12,<0.4.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "langgraph (>=1.0.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
