[project]
name = "src"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
package-mode = false

dependencies = [
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-gigachat (>=0.3.12,<0.4.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "fastapi[all] (>=0.127.0,<0.128.0)",
    "fastapi-keycloak-middleware (>=1.3.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
